--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -2,10 +2,95 @@
 	controllerName="sap.ui.demo.basicTemplate.controller.Home"
 	displayBlock="true"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
-	<Page
-		id="page"
-		title="{i18n>title}">
-		<content></content>
+	xmlns:core="sap.ui.core"
+	xmlns:mvc="sap.ui.core.mvc"
+>
+	<Page title="{i18n>title}">
+		<content>
+			<Table
+				id="idDocumentList"
+				items="{
+					path: 'TestModel>/',
+					sorter: {
+						path: 'Belnr',
+						group: true
+					}
+				}"
+			>
+				<headerToolbar>
+					<OverflowToolbar>
+						<content>
+							
+							<ToolbarSpacer/>
+							<ComboBox
+								id="idPopinLayout"
+								placeholder="Popin layout options"
+								change="onPopinLayoutChanged"
+							>
+								<items>
+									<core:Item
+										text="Block"
+										key="Block"
+									/>
+									<core:Item
+										text="Grid Large"
+										key="GridLarge"
+									/>
+									<core:Item
+										text="Grid Small"
+										key="GridSmall"
+									/>
+								</items>
+							</ComboBox>
+						</content>
+					</OverflowToolbar>
+				</headerToolbar>
+				<columns>
+					<Column>
+						<Text text="{i18n>Belnr}"/>
+					</Column>
+					<Column
+						minScreenWidth="Tablet"
+						demandPopin="true"
+					>
+						<Text text="{i18n>Bukrs}"/>
+					</Column>
+					<Column
+						minScreenWidth="Tablet"
+						demandPopin="true"
+					>
+							<Text text="{i18n>Gjahr}"/>
+					</Column>
+					<Column
+						minScreenWidth="Desktop"
+						demandPopin="true"
+						hAlign="Center"
+					>
+						<Text text="{i18n>CitiPayStatus}"/>
+					</Column>
+					<Column
+						minScreenWidth="Desktop"
+						demandPopin="true"
+						hAlign="End"
+					>
+						<Text text="{i18n>SftpStatus}"/>
+					</Column>
+				</columns>
+				<items>
+					<ColumnListItem
+						type="Navigation"
+						press="onListItemPressed"
+					>
+						<cells>
+							<ObjectIdentifier title="{TestModel>Belnr}"/>
+							<Text text="{TestModel>Bukrs}"/>
+							<Text text="{TestModel>Gjahr}"/>
+							<Text text="{TestModel>CitiPayStatus}"/>
+							<Text text="{TestModel>SftpStatus}"/>
+						</cells>
+					</ColumnListItem>
+				</items>
+			</Table>
+		</content>
 	</Page>
 </mvc:View>
